[tool.poetry]
name = "envpool-xla-cleanrl"
version = "0.1.0"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
jax = "^0.3.14"
flax = "^0.5.2"
optax = "^0.1.2"
tensorboardX = "^2.5.1"
tensorboard = "^2.9.1"
wandb = "^0.12.21"
envpool = "0.6.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
